# c_timer

./: .gitignore  .gitmodules  Makefile  README.md  clib.json  meson.build  meson_options.txt
bins/: base640.c  timer0.c  timer1.c  timer2.c
include/: c_timer.h  c_timer_types.h  includes.h
meson/: new_dep.sh  new_submodule_dep.sh
scripts/: clib-cmds.sh  submodule-cmds.sh
src/: c_timer.c  includes.c
